# zed_zig

./: .gitignore  .mailmap  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  Cargo.toml  README.md  clippy.toml  deny.toml  extension.toml  rust-toolchain.toml  typos.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: 0_feature_request.yml  1_bug_report.yml  2_crash_report.yml
.github/workflows/: ci.yml
.zed/: settings.json  tasks.json
languages/zig/: highlights.scm  runnables.scm  tasks.json
snippets/: zig.json
src/: error.rs  extension.rs  lib.rs  settings.rs  util.rs
src/provider/: custom.rs  mod.rs  version.rs  zigscient.rs  zls.rs  zls_stable.rs
test/: build.zig  build.zig.zon
test/src/: main.zig
